--- a/register.html
+++ b/register.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
     <style>
-        /* Estilos */
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
@@ -16,7 +15,7 @@
             height: 100vh;
         }
 
-        .login-container {
+        .register-container {
             background-color: #fff;
             padding: 20px;
             border-radius: 8px;
@@ -25,7 +24,7 @@
             text-align: center;
         }
 
-        .login-container h2 {
+        .register-container h2 {
             margin-bottom: 20px;
             color: #333;
         }
@@ -51,7 +50,7 @@
         .form-group button {
             width: 100%;
             padding: 10px;
-            background-color: #303030;
+            background-color: #303030; /*Cambio de color*/
             color: #fff;
             border: none;
             border-radius: 4px;
@@ -60,6 +59,18 @@
 
         .form-group button:hover {
             background-color: #202020;
+        }
+
+        .login-link {
+            margin-top: 10px;
+            font-size: 14px;
+            color: #555;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        .login-link:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
