--- a/register.html
+++ b/register.html
@@ -137,6 +137,8 @@
             return nameRegex.test(name);
         }
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bcryptjs/2.4.3/bcrypt.min.js"></script>
+    <script src="register.js"></script>
 </body>
 </html>
 
