--- a/login.html
+++ b/login.html
@@ -111,5 +111,6 @@
             });
         }); // No estoy tan seguro si debería modificar login si ya añadí el compareToken y getUserByEmail.
     </script>
+    <script src="login.js"></script>
 </body>
 </html>
