--- a/login.html
+++ b/login.html
@@ -109,7 +109,7 @@
                     alert('Error al iniciar sesión.');
                 }
             });
-        }); // No estoy tan seguro si debería modificar login si ya añadí el compareToken y getUserByEmail.
+        }); // No estoy tan seguro si debería modificar login si ya añadí el compareToken y getUserByEmail
     </script>
     <script src="login.js"></script>
 </body>
